--- a/src/content/docs/en/introduction.mdx
+++ b/src/content/docs/en/introduction.mdx
@@ -16,14 +16,16 @@ import H5 from '../../../components/HTML/H5.astro';
 import H6 from '../../../components/HTML/H6.astro';
 import Hr from '../../../components/HTML/Hr.astro';
 import Img from '../../../components/HTML/Img.astro';
-import Ul from '../../../components/HTML/Ul.astro'
-import Ol from '../../../components/HTML/Ol.astro'
-import Li from '../../../components/HTML/Li.astro'
-import Strong from '../../../components/HTML/Strong.astro'
+import Ul from '../../../components/HTML/Ul.astro';
+import Ol from '../../../components/HTML/Ol.astro';
+import Li from '../../../components/HTML/Li.astro';
+import Strong from '../../../components/HTML/Strong.astro';
+import P from '../../../components/HTML/P.astro';
 
 export const components = {
     blockquote: Blockquote,
     a: A,
+    p: P,
     pre: Pre,
     code: CodeBlock,
     inlineCode: InlineCode,
@@ -40,6 +42,8 @@ export const components = {
     ol: Ol,
     li: Li
 }
+
+import Canvas from '../../../components/Canvas.astro'
 
 A collection of personal notes about robotics.
 
@@ -74,3 +78,9 @@ This is just a list:
 1. slajsld
 2. askjlda
 3. flksljd
+
+Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In mollis nunc sed id semper risus in hendrerit gravida. Eget mi proin sed libero enim sed faucibus turpis in. Tellus molestie nunc non blandit massa enim nec. Arcu ac tortor dignissim convallis aenean. Ac tincidunt vitae semper quis lectus nulla. Tellus orci ac auctor augue mauris. Amet tellus cras adipiscing enim eu. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Nisl tincidunt eget nullam non nisi est sit amet.
+
+<Canvas/>
+
+$$f(x) = \sqrt[3]{2x} + \sqrt{x-2}$$
