--- a/src/content/docs/en/introduction.mdx
+++ b/src/content/docs/en/introduction.mdx
@@ -142,3 +142,9 @@ The recommended way is using the `Math` component:
     formula="f(x) = \sqrt{x^2 + y^2}" 
     description="Just a description"
 />
+
+## Code Blocks
+
+```js filename="index.js"
+console.log(1)
+```
