custom macros for latex

--- a/src/content/docs/en/introduction.mdx
+++ b/src/content/docs/en/introduction.mdx
@@ -139,9 +139,11 @@ The recommended way is using the `Math` component:
 ```
 
 <Math 
-    formula="f(x) = \sqrt{x^2 + y^2}" 
+    formula="f(x) = \sqrt{x^2 + y^2} + \evh" 
     description="Just a description"
 />
+
+All the custom macros apply for inline LaTeX $\evg$.
 
 ## Code Blocks
 
