--- a/src/content/docs/en/introduction.mdx
+++ b/src/content/docs/en/introduction.mdx
@@ -120,7 +120,9 @@ This is just a list:
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In mollis nunc sed id semper risus in hendrerit gravida. Eget mi proin sed libero enim sed faucibus turpis in. Tellus molestie nunc non blandit massa enim nec. Arcu ac tortor dignissim convallis aenean. Ac tincidunt vitae semper quis lectus nulla. Tellus orci ac auctor augue mauris. Amet tellus cras adipiscing enim eu. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Nisl tincidunt eget nullam non nisi est sit amet.
 
-<Canvas/>
+<Canvas
+    description="Describe the image here"
+/>
 
 ## Mathematical Equations
 
@@ -170,6 +172,7 @@ IMPORTANT: All diagrams should be placed in the `resources` folder.
 <Drawio 
     file="test.drawio"
     page="1"
+    description="Insert the description of your diagram"
 />
 ```
 
