default message for descriptions

--- a/src/content/docs/en/introduction.mdx
+++ b/src/content/docs/en/introduction.mdx
@@ -166,19 +166,20 @@ To create diagram I like to use [Drawio](https://www.draw.io/). The problem I ha
 
 When many diagrams are produced the way I always organize them in a Drawio file `.drawio` containing "pages" in it, and each page is a different diagram.
 
-IMPORTANT: All diagrams should be placed in the `resources` folder.
+IMPORTANT: All diagrams should be placed in the `resources` folder inside `src/resources`.
 
 ```
 <Drawio 
     file="test.drawio"
     page="1"
-    description="Insert the description of your diagram"
+    description="Here you can describe the diagram"
 />
 ```
 
 <Drawio 
     file="test.drawio"
     page="1"
+    description="Here you can describe the diagram"
 />
 
 <Drawio 
