--- a/src/content/docs/en/fnd-linear-algebra.mdx
+++ b/src/content/docs/en/fnd-linear-algebra.mdx
@@ -2,15 +2,36 @@
 title: "Recap Linear Algebra"
 ---
 
-import Math from "../../../components/Math.astro";
 import JSXGraph from "../../../components/Figures/JSXGraph.astro";
+
+export const components = {
+    blockquote: Blockquote,
+    a: A,
+    pre: Pre,
+    code: CodeBlock,
+    pre: InlineCode,
+    em: Em,
+    h1: H1,
+    h2: H2,
+    h3: H3,
+    h4: H4,
+    h5: H5,
+    h6: H6,
+    hr: Hr,
+    img: Img,
+    ul: Ul,
+    ol: Ol,
+    li: Li,
+    strong: Strong,
+    p: P
+}
 
 ## Vector
 
 > In mathematics, physics, and engineering, a Euclidean vector or simply a vector (sometimes called a geometric vector or spatial vector) is a geometric object that has magnitude (or length) and direction.
 source: https://en.wikipedia.org/wiki/Euclidean_vector
 
-Operation on vecotrs:
+Operations on vectors:
 - Scalar multiplication
 - Addition and Subtraction
 - Length
@@ -20,7 +41,7 @@ Operation on vecotrs:
 
 ### Scalar Multiplication
 
-<Math
+<Equation
     formula="a \vv"
     description="Scalar **bold** multiplication. The scalar $a$ multiply the vector $\vv$"
 />
