--- a/src/content/docs/en/introduction.mdx
+++ b/src/content/docs/en/introduction.mdx
@@ -3,6 +3,30 @@ title: "Test and template"
 description: Find out the tools integrated in this docs!
 ---
 
+import Canvas from '../../../components/Figures/Canvas.astro';
+
+export const components = {
+    blockquote: Blockquote,
+    a: A,
+    pre: Pre,
+    code: CodeBlock,
+    pre: InlineCode,
+    em: Em,
+    h1: H1,
+    h2: H2,
+    h3: H3,
+    h4: H4,
+    h5: H5,
+    h6: H6,
+    hr: Hr,
+    img: Img,
+    ul: Ul,
+    ol: Ol,
+    li: Li,
+    strong: Strong,
+    p: P
+}
+
 ## Background (TL;DR)
 
 For a long time I've watend to have a personal documentation website equipped with all sorts of tools to make the content more engaging and interactive, but without shooting myself in the foot with complicated markup languages and long editing time. So after years trying out different platforms, frameworks, libraries and markups I realize that I love the simplicity of `markdown`, but for those features it falls short in interactivity and modularity (and that's fine), but I would love to have the option of defining more dynamic content. At that point it comes into play [`MDX`](https://mdxjs.com/), as they say "Markdown for the component era".
@@ -21,54 +45,6 @@ title: "Define you title like this"
 ```
 
 for more info check [Markdown and MDX](https://docs.astro.build/en/guides/markdown-content/)
-
-
-import Blockquote from '../../../components/HTML/Blockquote.astro';
-import A from '../../../components/HTML/A.astro';
-import Pre from '../../../components/HTML/Pre.astro';
-import CodeBlock from '../../../components/HTML/CodeBlock.astro';
-import InlineCode from '../../../components/HTML/InlineCode.astro';
-import Em from '../../../components/HTML/Em.astro';
-import H1 from '../../../components/HTML/H1.astro';
-import H2 from '../../../components/HTML/H2.astro';
-import H3 from '../../../components/HTML/H3.astro';
-import H4 from '../../../components/HTML/H4.astro';
-import H5 from '../../../components/HTML/H5.astro';
-import H6 from '../../../components/HTML/H6.astro';
-import Hr from '../../../components/HTML/Hr.astro';
-import Img from '../../../components/HTML/Img.astro';
-import Ul from '../../../components/HTML/Ul.astro';
-import Ol from '../../../components/HTML/Ol.astro';
-import Li from '../../../components/HTML/Li.astro';
-import Strong from '../../../components/HTML/Strong.astro';
-import P from '../../../components/HTML/P.astro';
-
-import Math from '../../../components/Math.astro';
-import Figure from '../../../components/Figure.astro';
-import Canvas from '../../../components/Canvas.astro';
-import Drawio from '../../../components/Drawio.astro';
-
-export const components = {
-    blockquote: Blockquote,
-    a: A,
-    p: P,
-    pre: Pre,
-    code: CodeBlock,
-    inlineCode: InlineCode,
-    em: Em,
-    h1: H1,
-    h2: H2,
-    h3: H3,
-    h4: H4,
-    h5: H5,
-    h6: H6,
-    hr: Hr,
-    img: Img,
-    ul: Ul,
-    ol: Ol,
-    li: Li
-}
-
 
 A collection of personal notes about robotics.
 
@@ -99,18 +75,18 @@ before a line break…
 
 ![](/banner.png)
 
-Using `Figure` component:
+Using `Image` component:
 
 ```
-<Figure
+<Image
     src="/banner.png"
-    description="Figure description here"
+    description="Image description here"
 />
 ```
 
-<Figure
+<Image
     src="/banner.png"
-    description="Figure description here"
+    description="Image description here"
 />
 
 This is just a list:
@@ -133,15 +109,15 @@ $$
 f(x) = x + a
 $$
 
-The recommended way is using the `Math` component:
+The recommended way is using the `Equation` component:
 ```
-<Math 
+<Equation 
     formula="f(x) = \sqrt{x^2 + y^2}" 
     description="Just a description"
 />
 ```
 
-<Math 
+<Equation 
     formula="f(x) = \sqrt{x^2 + y^2} + \evh" 
     description="Just a description"
 />
