remark plugin for github flavored markdown

--- a/src/content/docs/en/introduction.mdx
+++ b/src/content/docs/en/introduction.mdx
@@ -162,3 +162,24 @@ IMPORTANT: All diagrams should be placed in the `resources` folder inside `src/r
     file="test.drawio"
     page="2"
 />
+
+## Github Flavored Markdown Support
+
+A note[^1]
+
+[^1]: Big note.
+
+Strikethrough:
+
+~one~ or ~~two~~ tildes.
+
+Table:
+
+| a | b  |  c |  d  |
+| - | :- | -: | :-: |
+| This | is | a | table |
+
+## Tasklist
+
+* [ ] to do
+* [x] done
