init JSXGraph with custom options

--- a/src/content/docs/en/fnd-linear-algebra.mdx
+++ b/src/content/docs/en/fnd-linear-algebra.mdx
@@ -2,7 +2,7 @@
 title: "Recap Linear Algebra"
 ---
 
-import JSXGraph from "../../../components/Figures/JSXGraph.astro";
+import ScalarMult from "../../../components/LinearAlgebra/ScalarMult.astro";
 
 export const components = {
     blockquote: Blockquote,
@@ -46,4 +46,10 @@ Operations on vectors:
     description="Scalar **bold** multiplication. The scalar $a$ multiply the vector $\vv$"
 />
 
-<JSXGraph/>
+<ScalarMult
+    description="original vector"
+/>
+
+### Addition and Subtraction
+
+
