helper parser for markdown and latex used for descriptions

--- a/src/content/docs/en/introduction.mdx
+++ b/src/content/docs/en/introduction.mdx
@@ -3,7 +3,7 @@ title: "Test and template"
 description: Find out the tools integrated in this docs!
 ---
 
-import Canvas from '../../../components/Figures/Canvas.astro';
+import Cube from '../../../components/Figures/Cube.astro';
 
 export const components = {
     blockquote: Blockquote,
@@ -24,7 +24,6 @@ export const components = {
     ol: Ol,
     li: Li,
     strong: Strong,
-    p: P
 }
 
 ## Background (TL;DR)
@@ -86,7 +85,7 @@ Using `Image` component:
 
 <Image
     src="/banner.png"
-    description="Image description here"
+    description="Image description **here**"
 />
 
 This is just a list:
@@ -96,7 +95,7 @@ This is just a list:
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. In mollis nunc sed id semper risus in hendrerit gravida. Eget mi proin sed libero enim sed faucibus turpis in. Tellus molestie nunc non blandit massa enim nec. Arcu ac tortor dignissim convallis aenean. Ac tincidunt vitae semper quis lectus nulla. Tellus orci ac auctor augue mauris. Amet tellus cras adipiscing enim eu. Aenean euismod elementum nisi quis eleifend quam adipiscing vitae. Nisl tincidunt eget nullam non nisi est sit amet.
 
-<Canvas
+<Cube
     description="Describe the image here"
 />
 
