--- a/src/content/docs/en/fnd-linear-algebra.mdx
+++ b/src/content/docs/en/fnd-linear-algebra.mdx
@@ -3,6 +3,11 @@ title: "Recap Linear Algebra"
 ---
 
 import ScalarMult from "../../../components/LinearAlgebra/ScalarMult.astro";
+import VectorMult from "../../../components/LinearAlgebra/VectorMult.astro";
+import VectorLength from "../../../components/LinearAlgebra/VectorLength.astro"
+import UnitVector from "../../../components/LinearAlgebra/UnitVector.astro"
+import DotProduct from "../../../components/LinearAlgebra/DotProduct.astro"
+import CrossProduct from "../../../components/LinearAlgebra/CrossProduct.astro"
 
 export const components = {
     blockquote: Blockquote,
@@ -42,7 +47,7 @@ Operations on vectors:
 ### Scalar Multiplication
 
 <Equation
-    formula="a \vv"
+    formula="a \cdot \vv"
     description="Scalar **bold** multiplication. The scalar $a$ multiply the vector $\vv$"
 />
 
@@ -52,4 +57,68 @@ Operations on vectors:
 
 ### Addition and Subtraction
 
+<Equation
+    formula="\vc + \vd"
+    description="Addition and Subtraction of vectors."
+/>
 
+<VectorMult
+    description="Interaction between vectors addition"
+/>
+
+### Length
+
+<Equation
+    formula="\Vert \vx \Vert_2 = \sqrt{x_1^2 + x_2^2 + \cdots + x_n^2}"
+    description="On the n-dimensional Euclidean space $\sR^n$ the intuitive notion of length of the vector $\vx = (x_1, x_2, \cdots , x_n)$ is captured by this formula"
+/>
+
+The Euclidean norm is also called the $L^{2}$ norm, $\ell^{2}$ norm, 2-norm, or square norm; see $L^{p}$ space.
+
+<VectorLength
+    description="Representation of Euclidean norm"
+/>
+
+### Normalized Vector
+
+<Equation
+    formula="\uvx = \frac{\vx}{\Vert \vx \Vert_2}"
+    description="The term *normalized vector* is sometimes used as a synonym for *unit vector*."
+/>
+
+<UnitVector
+    description="Unit vector representation"
+/>
+
+### Dot Product
+
+<Equation
+    formula="\va \cdot \vb = \sum_{i=1}^{n} a_{i} b_{i}"
+    description="Coordinate definition of the dot product."
+/>
+
+<Equation
+    formula="\va \cdot \vb = \Vert \va \Vert \cdot \Vert \vb \Vert cos\theta"
+    description="Geometric definition of the dot product. Where $\Vert \va \Vert$ and $\Vert \vb \Vert$ are the euclidean norm and $\theta$ is the angle between the vectors"
+/>
+
+$$
+\vx \cdot \vy = \begin{Vmatrix} \vx \end{Vmatrix} \begin{Vmatrix} \vy \end{Vmatrix} \cos{\theta}
+$$
+
+if $\vx \cdot \vy = 0$, $\vx$ and $\vy$ are orthogonal
+
+$$
+\cos{\theta} = \frac{\vx \cdot \vy}{\begin{Vmatrix} \vx \end{Vmatrix} \begin{Vmatrix} \vy \end{Vmatrix}}
+$$
+
+<DotProduct/>
+
+### Cross Product
+
+<Equation
+    formula="\va \times \vb = \Vert \va \Vert \Vert \vb \Vert sin(\theta) \uvn"
+    description="where: - $\theta$ is the angle between $\va$ and $\vb$ in the plane containing them $\Vert \va \Vert$ and $\Vert \vb \Vert$ are the magnitudes of vectors $\va$ and $\vb$ and $\uvn$ is a unit vector perpendicular to the plane containing $\va$ and $\vb$, with direction such that the ordered set ($\va$, $\vb$, $\uvn$) is positively-oriented."
+/>
+
+## Matrix
