scalar information and tensor section added

--- a/src/content/docs/en/fnd-linear-algebra.mdx
+++ b/src/content/docs/en/fnd-linear-algebra.mdx
@@ -30,10 +30,31 @@ export const components = {
     p: P
 }
 
+## Scalar
+
+<Definition
+    definition="A scalar is a one-component quantity that is invariant under rotations of the coordinate system."
+    source="Scalar - Mathworld Wolfram"
+    link="https://mathworld.wolfram.com/Scalar.html"
+/>
+
+<Equation
+    formula="a"
+    description="Scalar representation."
+/>
+
 ## Vector
 
-> In mathematics, physics, and engineering, a Euclidean vector or simply a vector (sometimes called a geometric vector or spatial vector) is a geometric object that has magnitude (or length) and direction.
-source: https://en.wikipedia.org/wiki/Euclidean_vector
+<Definition 
+    definition="In mathematics, physics, and engineering, a Euclidean vector or simply a vector (sometimes called a geometric vector or spatial vector) is a geometric object that has magnitude (or length) and direction."
+    source="Euclidean vector  - Wikipedia"
+    link="https://en.wikipedia.org/wiki/Euclidean_vector"
+/>
+
+<Equation
+    formula="\vx = \begin{bmatrix} x_1 \\ x_2 \\ \vdots \\ x_n \end{bmatrix}"
+    description="Vector representation."
+/>
 
 Operations on vectors:
 - Scalar multiplication
@@ -154,3 +175,7 @@ note:
 - Matrix-matrix multiplication $\mM_1 \mM_2$
 - Inverse $\mM^{-1}$
 - Transpose $\mM^\transpose$
+
+## Tensor
+
+
