--- a/src/content/docs/en/aima-003.mdx
+++ b/src/content/docs/en/aima-003.mdx
@@ -94,9 +94,9 @@ State spaces:
     description="Finite and Infinite graphs"
 />
 
-## Uninformed Search
+## Uniformed Search
 
-What is uninformed search? An uninformed search algorithm is given no clue about how close a state is to the goal(s). Uninformed strategies use only the information available in the problem definition.
+What is uniformed search? An uninformed search algorithm is given no clue about how close a state is to the goal(s). Uninformed strategies use only the information available in the problem definition.
 
 [Solving problems by searching interactive diagrams](https://aimacode.github.io/aima-javascript/3-Solving-Problems-By-Searching/)
 
@@ -111,6 +111,22 @@ Uninformed search strategies:
 
 The root node is expanded first, then all the successors of the root node are expanded next, then their successors, and so on. This is a systematic search strategy that is therefore **complete** even on **infinite state spaces**.
 
+The evaluation function for BFS is $f(n) = d$ where $d$ is the node depth assuming a $cost=1$ per step.
+
+<Drawio 
+    file="aima-03.drawio"
+    page="6"
+    description="Breadth-first search example."
+/>
+
+### Dijkstra's algorithm and Uniformed Search
+
+<Drawio
+    file="aima-03.drawio"
+    page="5"
+    description="Dijkstra's algorithm"
+/>
+
 ## Informed (Heuristic) Search
 
 Informed search: One that uses *domain-specific hints* about the location of goals and can find solutions more efficiently than an uninformed strategy.
@@ -120,6 +136,7 @@ Informed search: One that uses *domain-specific hints* about the location of goa
     description="**Heuristic function**: estimated cost of the cheapest path from the state at node `n` to a goal state."
 />
 
+
 Informed search strategies:
 - Greedy search
 - A*
@@ -128,3 +145,32 @@ Informed search strategies:
 - Bidirectional search
 - Beam search
 - Weighted A∗
+
+### Greedy search
+
+A form of best-first search that expands first the node with lowest $h(n)$ value (the node that appears to be closest to the goal) on the grounds that this is likely to lead to a solution quickly. So the evaluation function $f (n) = h(n)$.
+
+<Drawio 
+    file="aima-03.drawio"
+    page="3"
+    description="Greedy search example."
+/>
+
+### A*
+
+The most common informed search algorithm is A∗ search (pronounced “A-star search”), a best-first search that uses the evaluation function:
+
+$$
+f (n) = g(n) + h(n)
+$$
+
+- $g(n)$ is the path cost from the initial state to node $n$.
+- $h(n)$ is the estimated cost of the shortest path from $n$ to a goal state.
+
+So we have $f(n)$ = estimated cost of the best path that continues from n to a goal.
+
+<Drawio
+    file="aima-03.drawio"
+    page="4"
+    description="A* search example"
+/>
