--- a/src/content/docs/en/ros2-workspace.mdx
+++ b/src/content/docs/en/ros2-workspace.mdx
@@ -3,8 +3,29 @@ title: "Workspace"
 description: "Create a manage a ROS workspace"
 ---
 
-<Important
-    note="The concept of a workspace is **independent** of the ROS VERSION (ROS 1 or ROS 2).​"
-/>
+export const components = {
+    blockquote: Blockquote,
+    a: A,
+    pre: Pre,
+    code: CodeBlock,
+    pre: InlineCode,
+    em: Em,
+    h1: H1,
+    h2: H2,
+    h3: H3,
+    h4: H4,
+    h5: H5,
+    h6: H6,
+    hr: Hr,
+    img: Img,
+    ul: Ul,
+    ol: Ol,
+    li: Li,
+    strong: Strong,
+    p: P
+}
 
-ROS workspace: "A workspace is a directory containing ROS packages."
+<Terminal
+    content="mkdir -p ~/ros2_ws/src \
+    cd ~/ros2_ws/src"
+/>
