--- a/src/content/docs/en/auto-mobile.mdx
+++ b/src/content/docs/en/auto-mobile.mdx
@@ -1,6 +1,5 @@
 ---
-title: "Workspace"
-description: "Create a manage a ROS workspace"
+title: "Autonomous Mobile Robots"
 ---
 
 export const components = {
@@ -25,7 +24,21 @@ export const components = {
     p: P
 }
 
-<Terminal
-    content="mkdir -p ~/ros2_ws/src \
-    cd ~/ros2_ws/src"
-/>
+Key questions:
+- Where am I?
+- Where I'm going?
+- How to get there?
+
+<br/>
+
+See-think-act:
+- Motion Control
+- Perception
+- Localization
+- Planning
+    - Global plannign
+    - Local planning
+
+## Locomotion
+
+
