--- a/src/content/docs/en/fnd-linear-algebra.mdx
+++ b/src/content/docs/en/fnd-linear-algebra.mdx
@@ -88,6 +88,8 @@ Operations on vectors:
 
 ### Length
 
+#### The norm of a vector
+
 <Equation
     formula="\Vert \vx \Vert_2 = \sqrt{x_1^2 + x_2^2 + \cdots + x_n^2}"
     description="On the n-dimensional Euclidean space $\sR^n$ the intuitive notion of length of the vector $\vx = (x_1, x_2, \cdots , x_n)$ is captured by this formula"
@@ -97,6 +99,22 @@ The Euclidean norm is also called the $L^{2}$ norm, $\ell^{2}$ norm, 2-norm, or 
 
 <VectorLength
     description="Representation of Euclidean norm"
+/>
+
+#### The Norm of a Matrix
+
+Just to recap, the triangle inequality says:
+
+<Equation
+    formula="\Vert \vx + \vy \Vert \leq \Vert \vx \Vert \Vert \vy \Vert"
+    description="Triangle inequality."
+/>
+
+This also applies to matrices:
+
+<Equation
+    formula="\Vert \mA + \mB \Vert \leq \Vert \mA \Vert \Vert \mB \Vert"
+    description="Triangle inequality applied to matrices."
 />
 
 ### Normalized Vector
