--- a/src/content/docs/en/sources.mdx
+++ b/src/content/docs/en/sources.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Introduction"
-description: Introduction to AI a modern approach
+title: Source of information
+description: A collection of places to look for information
 ---
 
 export const components = {
@@ -25,6 +25,7 @@ export const components = {
     p: P
 }
 
-## What is AI?
 
+## Journals
 
+- [The International Journal of Robotics Research](https://journals.sagepub.com/home/ijr) 
