--- a/src/content/docs/en/cpp.mdx
+++ b/src/content/docs/en/cpp.mdx
@@ -1,5 +1,6 @@
 ---
 title: "Recap C++"
+draft: true
 ---
 
 export const components = {
@@ -7,7 +8,6 @@ export const components = {
     a: A,
     pre: Pre,
     code: CodeBlock,
-    pre: InlineCode,
     em: Em,
     h1: H1,
     h2: H2,
@@ -41,11 +41,55 @@ export const components = {
 
 ## Compilation Process
 
-- Pre-process
-- Compile
-- Assembly
-- Link
+1. Pre-process
+2. Compile
+3. Assembly
+4. Link
 
 ### Pre-process
+
+```
+g++ -E main.cpp > main.i
+```
+
+### Compilation
+
+```
+g++ -S main.i
+```
+
+### Assembly
+
+```
+g++ -c main.s
+```
+
+### Linking
+
+```
+g++ main.o -o main
+```
+
+## Library
+
+Type of libraries:
+- **Static**: faster, take a lot of space, become part of the end binary, name: `lib*.a`
+- **Dynamic**: slower, can be copied, referenced by a program, named `lib*.so`
+
+## Function
+
+Function **declaration** sets up a interface:
+
+```cpp
+void FuncName(int param);
+```
+
+Function **definition** holds the implementation of the function
+
+```cpp
+void FuncName(int param){
+    cout << "This function is called FuncName" << endl;
+}
+```
 
 
