--- a/src/content/docs/en/ref-notation.mdx
+++ b/src/content/docs/en/ref-notation.mdx
@@ -2,24 +2,50 @@
 title: "Notation"
 ---
 
+export const components = {
+    blockquote: Blockquote,
+    a: A,
+    pre: Pre,
+    code: CodeBlock,
+    pre: InlineCode,
+    em: Em,
+    h1: H1,
+    h2: H2,
+    h3: H3,
+    h4: H4,
+    h5: H5,
+    h6: H6,
+    hr: Hr,
+    img: Img,
+    ul: Ul,
+    ol: Ol,
+    li: Li,
+    strong: Strong,
+    p: P
+}
+
 ## Numbers and Arrays
 
-| Description | Representation |
-| --- | ---|
-| Scalar | $a$ |
-| Vector | $\va$ |
-| Matrix | $\mA$ |
-| Tensor | $\tA$ |
+| Description | Representation | Command |
+| --- | --- | --- |
+| Scalar | $a$ | `a` |
+| Vector | $\va$ | `\va` |
+| Matrix | $\mA$ | `\mA` |
+| Tensor | $\tA$ | `\tA` |
 
 ## Set and Graphs
 
-| Description | Representation |
-| --- | --- |
-| Set | $\sA$ |
-| Set of real numbers | $\sR$ |
-| Set containing $0$ and $1$ | $\{0, 1\}$ |
-| Set of all integers between $0$ and $n$ | $\{0, 1, \dots, n\}$ |
-| Real interval including $a$ and $b$ | $[a, b]$ |
-| Real interval excluding $a$ but including $b$ | $(a, b]$ |
+| Description | Representation | Command |
+| --- | --- | --- |
+| Set | $\sA$ | `\sA` |
+| Set of real numbers | $\sR$ | `\sR` |
+| Set containing $0$ and $1$ | $\{0, 1\}$ | `\{0, 1\}` |
+| Set of all integers between $0$ and $n$ | $\{0, 1, \dots, n\}$ | `\{0, 1, \dots, n\}` |
+| Real interval including $a$ and $b$ | $[a, b]$ | [a, b] |
+| Real interval excluding $a$ but including $b$ | $(a, b]$ | (a, b] |
 
-## Indexing
+## Geometry
+
+| Description | Representation | Command |
+| --- | --- | --- |
+| Reference frame | $\fA$ | `\fA` |
