dependency nightmare pass

--- a/src/content/docs/en/aima-001.mdx
+++ b/src/content/docs/en/aima-001.mdx
@@ -28,3 +28,6 @@ export const components = {
 ## What is AI?
 
 
+AI is not just about understanding intelligence but also **building** intelligent entities.
+
+How can we define AI? the main problem that to be able to define we need to be able to define intelligence. But that
