--- a/src/content/docs/en/ros2-dds.mdx
+++ b/src/content/docs/en/ros2-dds.mdx
@@ -66,3 +66,10 @@ More about `ROS_DOMAIN_ID` in the [official docs](https://docs.ros.org/en/humble
 - [DDS implementations - ROS docs](https://docs.ros.org/en/humble/Installation/DDS-Implementations.html)
 - [DDS - Specification](https://www.omg.org/spec/DDS)
 - [DDS Interoperability Wire Protocol](https://www.omg.org/spec/DDSI-RTPS/)
+
+Blogs:
+- [ROS and DDS: Making the Most Out of Your Software Framework](https://www.electronicdesign.com/markets/automation/article/21258792/realtime-innovations-rti-ros-and-dds-making-the-most-out-of-your-software-framework)
+
+Videos:
+- [ROS 2 + DDS Interoperation](https://www.youtube.com/watch?v=GGqcrccWfeE)
+- [Wednesday Webinar: The Use of DDS Middleware in Robotics](https://www.youtube.com/watch?v=OQYBJJ5ydto)
