--- a/src/content/docs/en/ros2-nodes.mdx
+++ b/src/content/docs/en/ros2-nodes.mdx
@@ -103,3 +103,7 @@ entry_points={
 ## Using Classes
 
 - coding a logger using classes (`class.py`) in the package `python_basics`, code [here](https://github.com/harleylara/ros2-intro/blob/master/python_basics/python_basics/class.py)
+
+## External References
+
+- [Managed nodes - ROS 2 Design](https://design.ros2.org/articles/node_lifecycle.html)
