--- a/src/content/docs/en/probability.mdx
+++ b/src/content/docs/en/probability.mdx
@@ -25,9 +25,12 @@ export const components = {
     p: P
 }
 
-> How can we model a random process or "experiment"? For example how can we define the process of throwing a die.
 
-The answer to this is providad by the concept of **Probability Space**: is a mathematical construct that provides a formal model of a random process or "experiment". [Probability Space - Wikipedia](https://en.wikipedia.org/wiki/Probability_space)
+<Think
+    note="How can we model a random process or 'experiment'? For example how can we define the process of throwing a die."
+/>
+
+The answer to this is provided by the concept of **Probability Space**: is a mathematical construct that provides a formal model of a random process or "experiment". [Probability Space - Wikipedia](https://en.wikipedia.org/wiki/Probability_space)
 
 ## The Building Blocks
 
