--- a/src/content/docs/en/ai-history.mdx
+++ b/src/content/docs/en/ai-history.mdx
@@ -26,7 +26,7 @@ export const components = {
 }
 
 
-## A Logical Calculus of the Ideas Immanent in Nervous Activity
+## [1943] A Logical Calculus of the Ideas Immanent in Nervous Activity
 
 Warren Sturgis McCulloch:
 - American neurophysiologist
@@ -41,3 +41,19 @@ Concepts:
 Facts:
 - "[...] including the Principia conventions for dots."
     - [The Use of Dots for Punctuation and for Conjunction in Principia Mathematica](https://plato.stanford.edu/entries/pm-notation/dots.html)
+
+
+## [1958]
+
+
+## [1960 - 1970]
+
+
+- [Minsky vs Rosenblatt](https://blogs.umass.edu/brain-wars/the-debates/minsky-vs-rosenblatt/)
+- [The AI Wars: lessons from the conflict that paralyzed the field](https://towardsdatascience.com/the-ai-wars-lessons-from-the-conflict-that-paralyzed-the-field-7344666c7875)
+
+## External References
+
+- [Timeline of Deep Learning Highlights 1960-2013](https://people.idsia.ch/~juergen/firstdeeplearner.html) by Jürgen Schmidhuber
+- [Critique of Honda Prize for Dr. Hinton](https://people.idsia.ch/~juergen/critique-honda-prize-hinton.html) by Jürgen Schmidhuber
+- [Who Invented Backpropagation?](https://people.idsia.ch/~juergen/who-invented-backpropagation.html) by Jürgen Schmidhuber
